Insert from the archive area, fixes & debugging of note shifts in all areas and a small adjustment to the style.css with gap:15px; in the main area

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ main {
     padding: 10px 20px 10px 20px;
     display: flex;
     flex-direction: column;
+    gap: 15px;
 }
 
 .content_item {
